--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <article id="photos">
       <h2 class="title__photos">Photos du Japon</h2>
       <div class="container__image">
-        <img src="./images/chateau.jpg" alt="Cheteau du Japon pendant un coucher de soleil">
+        <img src="./images/chateau.jpg" alt="Chateau du Japon pendant un coucher de soleil">
         <img src="./images/arc.jpg" alt="Arc de temple japonais">
         <img src="./images/women.jpg" alt="Une femme devant une pancarte de marché">
         <img src="./images/osaka.jpg" alt="Une vue d'Osaka">
